--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
 	"require": {
 		"laravel/framework": "5.0.*",
 		"illuminate/html": "~5.0",
-		"guzzlehttp/guzzle": "~5.2"
+		"guzzlehttp/guzzle": "~5.2",
+		"intervention/image": "^2.2"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
