--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "5.0.*",
 		"illuminate/html": "~5.0",
 		"guzzlehttp/guzzle": "~5.2",
-		"intervention/image": "^2.2"
+		"intervention/image": "^2.2",
+		"madcoda/php-youtube-api": "^1.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
