Added ui-router to the application and changed existing routes to use ui-router

--- a/package.json
+++ b/package.json
@@ -4,5 +4,8 @@
     "gulp": "^3.8.8",
     "gulp-sass": "^2.2.0",
     "laravel-elixir": "*"
+  },
+  "dependencies": {
+    "angular-ui-router": "^0.4.2"
   }
 }
