--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "laravel-elixir": "*"
   },
   "dependencies": {
-    "angular-ui-router": "^0.4.2"
+    "angular-ui-router": "^0.4.2",
+    "lodash": "^4.17.4"
   }
 }
